--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
       .green.on {
         background-color: lime;
       }
+
+      .button {
+        width: 200px;
+        background: none;
+        margin: 0;
+        padding: 1em;
+        font-weight: bold;
+        border: 3px solid black;
+      }
+
+      .pressed {
+        background-color: black;
+        color: white;
+      }
+
+      .button:focus {
+        outline: none;
+      }
     </style>
   </head>
   <body>
@@ -68,7 +86,7 @@
       <div id="walk-signal" class="walk-sign">
         <i id="walk-icon" class="fas" style="font-size: 300%;" />
       </div>
-      <button id="walk-button">Walk</button>
+      <button id="walk-button" class="button">PRESS TO WALK</button>
     </div>
     <script src="./index.js"></script>
     <script src="https://kit.fontawesome.com/36a13a3871.js" crossorigin="anonymous"></script>
