--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         padding-top: 10px;
         background-color: black;
         text-align: center;
+        margin: 1em;
       }
 
       .light {
@@ -84,7 +85,7 @@
         <div class="light green"></div>
       </div>
       <div id="walk-signal" class="walk-sign">
-        <i id="walk-icon" class="fas" style="font-size: 300%;" />
+        <i id="walk-icon" class="fas fa-hand-paper" style="font-size: 300%;"></i>
       </div>
       <button id="walk-button" class="button">PRESS TO WALK</button>
     </div>
